  * Updated test_geodesy.py to work with the revised EOP parameter files
  * Fixed a formatting typo in lsl.reader.ldp when getInfo() tries to return an invalid key
  * Fixed a bug in lsl.reader.buffer that could lead to some invalid frames being added to the buffer
  * Dropped support for ADP DRX8 in the lsl.reader.buffer module
  * Dropped support for FreeBSD

1.1.3.2
  * Applied a fix for the course FIFO phase jumps in the core.c FEngineC2/3 functions.

1.1.3.1
  * Re-fixed a bug in the complex functions in lsl.correlator._spec and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly

1.1.3
  * Fixed a bug in the complex functions in lsl.correlator._core, lsl.correlator._spec, and lsl.correlator._stokes that caused the negative frequencies in odd-sized FFTs to be unpacked incorrectly
  * Updated the tai-utc.dat file for the upcoming leap second in December 2016
  * Changed the Earth orientation parameters data source to the IERS FTP server

1.1.2
  * Fixed a bug in the lsl.reader.ldp.TBWFile class that caused the wrong start time to be returned in some cases
  * Fixed a missing import statement in tbnSpectra.py that caused the script to fail when a metadata tarball as passed in on the command line
  * Updated the lsl.writer.fitsidi module to be more efficient
  * Updated the lsl.writer.uvfits module to be more efficient
  * Updated the lsl.imaging.utils.CorrelatedMS function to work with MeasurementSets stored inside a tarball
  * Small change to lsl.correlator.uvUtils.computeUVW to make it faster for large frequency arrays
  * Added 'memmap' and 'clobber' keywords to the various lsl.writer modules to expose a consistent interface
  * Small fix in imageIDI.py to make it work with CASA MeasurementSets
  * Transitioned to the native C complex type for the various C extensions
  * Added 'memmap' and 'clobber' keywords to the various lsl.writer modules to expose a consistent interface