@@ -351,7 +351,8 @@ def readFrame(filehandle, Verbose=False):
 	try:
 		newFrame = readTBW(filehandle, Frame())
 	except gsyncError:
-		raise syncError
+		mark = filehandle.tell() - FrameSize
+		raise syncError(location=mark)
 	except geofError:
 		raise eofError
 
